--- a/source/photo.html
+++ b/source/photo.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="" class="page-header__logo">
+      <a href="./index.html" class="page-header__logo">
         <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list menu">
@@ -219,6 +219,6 @@
         </div>
       </div>
     </footer>
-
+    <script src="./js/app.js"></script>
   </body>
 </html>
