--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,13 @@
   <body>
     <header class="page-header">
       <a href="./index.html" class="page-header__logo">
-        <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
+        <picture>
+          <source media="(min-width:1200px)" srcset="./img/logo-sedona-desktop.svg 188w">
+          <source media="(min-width:768px)" srcset="./img/logo-sedona-tablet.svg 102w">
+          <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
+        </picture>
+
+        <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона"> -->
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
