--- a/source/photo.html
+++ b/source/photo.html
@@ -9,7 +9,13 @@
   <body>
     <header class="page-header">
       <a href="./index.html" class="page-header__logo">
-        <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
+        <picture>
+          <source media="(min-width:1200px)" srcset="./img/logo-sedona-desktop.svg 188w">
+          <source media="(min-width:768px)" srcset="./img/logo-sedona-tablet.svg 102w">
+          <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
+        </picture>
+
+        <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона"> -->
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -45,9 +51,17 @@
           <li class="p__item p__item--main">
             <div class="p__picture">
               <picture>
-                <source media="(min-width:1200px)" srcset="img/photo-sunset-desktop@1x.jpg"> <!-- width="1200" height="400" -->
-                <source media="(min-width:768px)" srcset="img/photo-sunset-tablet@1x.jpg" >  <!-- width="648" height="400" -->
-                <img class="p__image" src="img/photo-sunset-mobile@1x.jpg" alt="Фотография 1">
+                <source
+                  media="(min-width:1200px)"
+                  srcset="img/photo-sunset-desktop@1x.jpg 1x,
+                          img/photo-sunset-desktop@2x.jpg 2x">
+                <source
+                  media="(min-width:768px)"
+                  srcset="img/photo-sunset-tablet@1x.jpg 1x,
+                          img/photo-sunset-tablet@2x.jpg 2x">
+                <img class="p__image"
+                  src="img/photo-sunset-mobile@1x.jpg"
+                  srcset="img/photo-sunset-mobile@2x.jpg 2x"  alt="Фотография восхода солнца"> <!-- 280x280 -->
               </picture>
               <div class="p__about">
                 <div class="p__text">
@@ -65,9 +79,17 @@
           <li class="p__item">
             <div class="p__picture">
               <picture>
-                <source media="(min-width:1200px)" srcset="img/photo-cactus-desktop@1x.jpg" >
-                <source media="(min-width:768px)" srcset="img/photo-cactus-tablet@1x.jpg" >
-                <img class="p__image" src="img/photo-cactus-mobile@1x.jpg"  alt="Фотография 2">
+                <source
+                  media="(min-width:1200px)"
+                  srcset="img/photo-cactus-desktop@1x.jpg 1x,
+                          img/photo-cactus-desktop@2x.jpg 2x">
+                <source
+                  media="(min-width:768px)"
+                  srcset="img/photo-cactus-tablet@1x.jpg 1x,
+                          img/photo-cactus-tablet@2x.jpg 2x">
+                <img class="p__image"
+                  src="img/photo-cactus-mobile@1x.jpg"
+                  srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фотография кактуса">
               </picture>
               <div class="p__about">
                 <div class="p__text">
@@ -85,9 +107,17 @@
           <li class="p__item">
             <div class="p__picture">
               <picture>
-                <source media="(min-width:1200px)" srcset="img/photo-roads-desktop@1x.jpg" >
-                <source media="(min-width:768px)" srcset="img/photo-roads-tablet@1x.jpg" >
-                <img class="p__image" src="img/photo-roads-mobile@1x.jpg"  alt="Фотография 3">
+                <source
+                  media="(min-width:1200px)"
+                  srcset="img/photo-roads-desktop@1x.jpg 1x,
+                          img/photo-roads-desktop@2x.jpg 2x">
+                <source
+                  media="(min-width:768px)"
+                  srcset="img/photo-roads-tablet@1x.jpg 1x,
+                          img/photo-roads-tablet@2x.jpg 2x">
+                <img class="p__image"
+                  src="img/photo-roads-mobile@1x.jpg"
+                  srcset="img/photo-roads-mobile@2x.jpg 2x"  alt="Фотография дороги">
               </picture>
               <div class="p__about">
                 <div class="p__text">
@@ -105,9 +135,17 @@
           <li class="p__item">
             <div class="p__picture">
               <picture>
-                <source media="(min-width:1200px)" srcset="img/photo-bridge-desktop@1x.jpg" >
-                <source media="(min-width:768px)" srcset="img/photo-bridge-tablet@1x.jpg" >
-                <img class="p__image" src="img/photo-bridge-mobile@1x.jpg"  alt="Фотография 4">
+                <source
+                  media="(min-width:1200px)"
+                  srcset="img/photo-bridge-desktop@1x.jpg 1x,
+                          img/photo-bridge-desktop@2x.jpg 2x">
+                <source
+                  media="(min-width:768px)"
+                  srcset="img/photo-bridge-tablet@1x.jpg 1x,
+                          img/photo-bridge-tablet@2x.jpg 2x">
+                <img class="p__image"
+                  src="img/photo-bridge-mobile@1x.jpg"
+                  srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Фотография моста дъявола">
               </picture>
               <div class="p__about">
                 <div class="p__text">
@@ -122,6 +160,7 @@
               </div>
             </div>
           </li>
+
         </ul>
       </section>
 
