завершил оптимизацию графики

--- a/source/form.html
+++ b/source/form.html
@@ -80,7 +80,7 @@
                 <div class="contact__wrap">
                   <input class="contact__input" name="phone" id="id_phone" type="text" placeholder="Введите телефон" required>
                   <div class="contact__icon-wrap">
-                    <svg class="contact__icon" width="18" height="18" role="img"><use xlink:href="img/sprite.svg#icon-phone"></use></svg>
+                    <svg class="contact__icon" width="18" height="18" role="img" aria-label="Изображение телефона" focusable="false"><use xlink:href="img/sprite.svg#icon-phone"></use></svg>
                   </div>
                 </div>
               </div>
@@ -89,7 +89,7 @@
                 <div class="contact__wrap">
                   <input class="contact__input" name="email" id="id_email" type="text" placeholder="Введите e-mail" required>
                   <div class="contact__icon-wrap">
-                    <svg class="contact__icon" width="16" height="16" role="img"><use xlink:href="img/sprite.svg#icon-mail"></use></svg>
+                    <svg class="contact__icon" width="16" height="16" role="img" aria-label="Изображение электронной почты" focusable="false"><use xlink:href="img/sprite.svg#icon-mail"></use></svg>
                   </div>
                 </div>
               </div>
