--- a/source/photo.html
+++ b/source/photo.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" role="img" width="22" height="20"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">143</p>
                 </div>
               </div>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" role="img" width="22" height="20"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">96</p>
                 </div>
               </div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" role="img" width="22" height="20"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">254</p>
                 </div>
               </div>
@@ -147,14 +147,6 @@
 
         </ul>
       </section>
-
-      <!-- <video style="display: none;" class="video__video--1111" src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-      width="321"
-      height="201"
-      --controls
-      --poster="img/video-mobile@1x.jpg"
-      preload="none">
-    </video> -->
 
       <section class="video">
         <h2 class="visually-hidden">Видео, показывающее достопримечательности Седоны</h2>
