проверил на браузерах Chrome, FF, Safari, IE11, Edge

--- a/source/photo.html
+++ b/source/photo.html
@@ -54,14 +54,16 @@
         <ul class="media__list p">
           <li class="p__item p__item--main">
             <div class="p__picture">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
-                <source media="(min-width:768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                <img class="p__image" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x"  alt="Фотография восхода солнца"> <!-- 280x280 -->
-              </picture>
+              <a href="img/full-photo-sunset.jpg">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
+                  <source media="(min-width:1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                  <source media="(min-width:768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                  <img class="p__image" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x"  alt="Фотография восхода солнца"> <!-- 280x280 -->
+                </picture>
+              </a>
               <div class="p__about">
                 <div class="p__text">
                   <p class="p__title">Неродные просторы</p>
@@ -77,14 +79,16 @@
           </li>
           <li class="p__item">
             <div class="p__picture">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
-                <source media="(min-width:768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
-                <img class="p__image" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фотография кактуса">
-              </picture>
+              <a href="img/full-photo-cactus.jpg">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
+                  <source media="(min-width:1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                  <source media="(min-width:768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                  <img class="p__image" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фотография кактуса">
+                </picture>
+              </a>
               <div class="p__about">
                 <div class="p__text">
                   <p class="p__title">Местная растительность</p>
@@ -100,14 +104,16 @@
           </li>
           <li class="p__item">
             <div class="p__picture">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
-                <source media="(min-width:768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                <img class="p__image" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x"  alt="Фотография дороги">
-              </picture>
+              <a href="img/full-photo-roads.jpg">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
+                  <source media="(min-width:1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                  <source media="(min-width:768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                  <img class="p__image" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x"  alt="Фотография дороги">
+                </picture>
+              </a>
               <div class="p__about">
                 <div class="p__text">
                   <p class="p__title">Дорога на север</p>
@@ -123,14 +129,16 @@
           </li>
           <li class="p__item">
             <div class="p__picture">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
-                <source media="(min-width:768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
-                <img class="p__image" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Фотография моста дъявола">
-              </picture>
+              <a href="img/full-photo-bridge.jpg">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
+                  <source media="(min-width:1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width:768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                  <img class="p__image" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Фотография моста дъявола">
+                </picture>
+              </a>
               <div class="p__about">
                 <div class="p__text">
                   <p class="p__title">Мост дъявола</p>
@@ -144,7 +152,6 @@
               </div>
             </div>
           </li>
-
         </ul>
       </section>
 
@@ -176,21 +183,20 @@
                 <button class="panel__slider" type="button"><span class="visually-hidden">Ползунок выбора начала просмотра</span></button>
                 <div class="panel__buttons">
                   <button class="panel__btn panel__btn--replay" type="button"><span class="visually-hidden">Перемотать назад</span>
-                    <svg class="panel__icon" width="16" height="20"><use xlink:href="img/sprite.svg#icon-video-replay"></use></svg>
+                    <svg class="panel__icon" width="16" height="20" focusable="false"><use xlink:href="img/sprite.svg#icon-video-replay"></use></svg>
                   </button>
                   <button class="panel__btn panel__btn--cc" type="button"><span class="visually-hidden">Включить субтитры</span>
-                    <svg class="panel__icon" width="32" height="20"><use xlink:href="img/sprite.svg#icon-video-subtitles"></use></svg>
+                    <svg class="panel__icon" width="32" height="20" focusable="false"><use xlink:href="img/sprite.svg#icon-video-subtitles"></use></svg>
                   </button>
                   <button class="panel__btn panel__btn--fullscreen" type="button"><span class="visually-hidden">На полный экран</span>
-                    <svg class="panel__icon" width="20" height="20"><use xlink:href="img/sprite.svg#icon-video-fullscreen"></use></svg>
+                    <svg class="panel__icon" width="20" height="20" focusable="false"><use xlink:href="img/sprite.svg#icon-video-fullscreen"></use></svg>
                   </button>
                 </div>
               </div>
               <div class="panel__space"></div>
             </div>
           </nav>
-      </div>
-
+        </div>
       </section>
 
     </main>
@@ -204,17 +210,17 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--twitter" href="" aria-label="link to Twitter">
-                <svg width="18" height="18" role="img"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
+                <svg width="17" height="15" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="" aria-label="link to Facebook">
-                <svg width="9" height="19" role="img"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
+                <svg width="9" height="19" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--youtube" href="" aria-label="link to Youtube">
-                <svg width="20" height="14" role="img" ><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
+                <svg width="20" height="14" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
               </a>
             </li>
           </ul>
@@ -222,12 +228,13 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
           <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
-            <svg width="27" height="34" role="img"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
+            <svg width="27" height="34" role="img" focusable="false"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
           </a>
         </div>
       </div>
     </footer>
 
     <script src="./js/app.js"></script>
+    <script src="./js/focus.js"></script>
   </body>
 </html>
