--- a/source/form.html
+++ b/source/form.html
@@ -69,7 +69,7 @@
                 <label class="person__item-label" for="id_middlename">Отчество<span>*</span>:</label>
                 <input class="person__item-input" name="middlename" id="id_middlename" type="text" placeholder="Александрович" required>
               </div>
-          </div>
+            </div>
           </div>
 
           <div class="form__item form__item--contact contact">
@@ -78,7 +78,7 @@
               <div class="contact__item">
                 <label class="contact__label" for="id_phone"><span class="contact__label2">Контактный</span> телефон<span>*</span>:</label>
                 <div class="contact__wrap">
-                  <input class="contact__input" name="phone" id="id_phone" type="text" placeholder="Введите телефон" required>
+                  <input class="contact__input" type="tel" name="phone" id="id_phone" type="text" placeholder="Введите телефон" required>
                   <div class="contact__icon-wrap">
                     <svg class="contact__icon" width="18" height="18" role="img" aria-label="Изображение телефона" focusable="false"><use xlink:href="img/sprite.svg#icon-phone"></use></svg>
                   </div>
@@ -87,7 +87,7 @@
               <div class="contact__item">
                 <label class="contact__label" for="id_email">Электронная почта<span>*</span>:</label>
                 <div class="contact__wrap">
-                  <input class="contact__input" name="email" id="id_email" type="text" placeholder="Введите e-mail" required>
+                  <input class="contact__input" type="email" name="email" id="id_email" placeholder="Введите e-mail" required>
                   <div class="contact__icon-wrap">
                     <svg class="contact__icon" width="16" height="16" role="img" aria-label="Изображение электронной почты" focusable="false"><use xlink:href="img/sprite.svg#icon-mail"></use></svg>
                   </div>
@@ -163,56 +163,58 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--twitter" href="" aria-label="link to Twitter">
-                <svg width="17" height="15" role="img"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
+                <svg width="17" height="15" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="" aria-label="link to Facebook">
-                <svg width="9" height="19" role="img"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
+                <svg width="9" height="19" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--youtube" href="" aria-label="link to Youtube">
-                <svg width="20" height="14" role="img" ><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
+                <svg width="20" height="14" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
               </a>
             </li>
           </ul>
         </div>
+
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
           <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
-            <svg width="27" height="34" role="img"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
+            <svg width="27" height="34" role="img" focusable="false"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
           </a>
         </div>
       </div>
     </footer>
 
-<br>  <!-- временно чтобы было видно карточку -->
+    <hr> <!-- временно чтобы было видно карточку -->
     <section class="modal card card--err">
       <h2 class="visually-hidden">Ошибки при заполнении формы</h2>
       <div class="card__info">
         <h3 class="card__title">Что-то пошло не так!</h3>
         <p class="card__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       </div>
-      <div class="card__botton-wrap card__botton-wrap--err">
-        <button class="card__button card__button--err" type="button">Ок</button>
+      <div class="card__botton-wrap">
+        <button class="card__button" type="button">Ок</button>
       </div>
     </section>
 
-<br> <!-- временно чтобы было видно карточку -->
+    <br> <!-- временно чтобы было видно карточку -->
     <section class="modal card card--ok">
       <h2 class="visually-hidden">Сообщение при успешной отправке формы</h2>
       <div class="card__info">
         <h3 class="card__title">Ваш отзыв отправлен!</h3>
         <p class="card__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
       </div>
-      <div class="card__botton-wrap card__botton-wrap--ok">
-        <button class="card__button card__button--ok" type="button">Закрыть окно</button>
+      <div class="card__botton-wrap">
+        <button class="card__button" type="button">Закрыть окно</button>
       </div>
 
     </section>
-<br> <!-- временно чтобы было видно карточку -->
+    <br> <!-- временно чтобы было видно карточку -->
 
-  <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/focus.js"></script>
   </body>
 </html>
